VS: vcxproj.filters ordering is not deterministic
Just run CMake twice or several times to generate the same C++ project without any changes, but the vcxproj.filters are changed. The order and guids of the filters are not stable.
<ItemGroup>
<Filter Include="Source Files">
<UniqueIdentifier>{908BADE7-2A58-333B-AD9B-5E1617448503}</UniqueIdentifier>
</Filter>
<Filter Include="Form Files">
<UniqueIdentifier>{9FA839DE-9FEE-30ED-B4E8-82D035CDF7A6}</UniqueIdentifier>
</Filter>
<Filter Include="GeneratedFiles">
<UniqueIdentifier>{23EAD13C-71A9-3CDF-95DC-E067B596CE7A}</UniqueIdentifier>
</Filter>
</ItemGroup>
Why? Is it a cmake bug? How to avoid the problem?
I would like CMake keep the vcxproj.filters file unchanged if all the source files are unchanged.
Maybe there is no problem with single project. My solution has dozens of projects, also C# and C++ projects mixed.
Thanks.
Edited by Brad King