VS: Order .vcxproj.filters files deterministically

Sort source groups by name rather than arbitrary pointer values.

Fixes: #17446